; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/extr_gpio_matrix.c_restore_keys_for_input.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/extr_gpio_matrix.c_restore_keys_for_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_kp = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_kp*, i32, i32)* @restore_keys_for_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @restore_keys_for_input(%struct.gpio_kp* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_kp*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.gpio_kp* %0, %struct.gpio_kp** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.gpio_kp*, %struct.gpio_kp** %4, align 8
  %11 = getelementptr inbounds %struct.gpio_kp, %struct.gpio_kp* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = mul nsw i32 %9, %14
  %16 = load i32, i32* %6, align 4
  %17 = add nsw i32 %15, %16
  store i32 %17, i32* %8, align 4
  br label %18

18:                                               ; preds = %38, %3
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.gpio_kp*, %struct.gpio_kp** %4, align 8
  %21 = getelementptr inbounds %struct.gpio_kp, %struct.gpio_kp* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = icmp slt i32 %19, %24
  br i1 %25, label %26, label %48

26:                                               ; preds = %18
  %27 = load i32, i32* %8, align 4
  %28 = load %struct.gpio_kp*, %struct.gpio_kp** %4, align 8
  %29 = getelementptr inbounds %struct.gpio_kp, %struct.gpio_kp* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = call i64 @test_bit(i32 %27, i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %26
  store i32 1, i32* %7, align 4
  %34 = load %struct.gpio_kp*, %struct.gpio_kp** %4, align 8
  %35 = load i32, i32* %5, align 4
  %36 = load i32, i32* %6, align 4
  %37 = call i32 @clear_phantom_key(%struct.gpio_kp* %34, i32 %35, i32 %36)
  br label %38

38:                                               ; preds = %33, %26
  %39 = load %struct.gpio_kp*, %struct.gpio_kp** %4, align 8
  %40 = getelementptr inbounds %struct.gpio_kp, %struct.gpio_kp* %39, i32 0, i32 0
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* %8, align 4
  %45 = add nsw i32 %44, %43
  store i32 %45, i32* %8, align 4
  %46 = load i32, i32* %5, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %5, align 4
  br label %18

48:                                               ; preds = %18
  %49 = load i32, i32* %7, align 4
  ret i32 %49
}

declare dso_local i64 @test_bit(i32, i32) #1

declare dso_local i32 @clear_phantom_key(%struct.gpio_kp*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
